Incluir nome de linguagens

--- a/menu.html
+++ b/menu.html
@@ -23,6 +23,7 @@
                 <br>
                 <a href="#UM">Voltar</a>
                 <hr>
+                Java
         </section>
         
         <section ID="DOIS">
@@ -30,6 +31,7 @@
                 <br>
                 <a href="#DOIS">Voltar</a>
                 <hr>
+                C#
         </section>
 
         <section ID="TRES">
@@ -37,6 +39,7 @@
                 <br>
                 <a href="#TRES">Voltar</a>
                 <hr>
+                HTML E CSS
         </section>
 
         <section ID="QUATRO">
@@ -44,6 +47,7 @@
                 <br>
                 <a href="#QUATRO">Voltar</a>
                 <hr>
+                JavaSCRIPT
         </section>
 
         <section ID="CINCO">
@@ -51,6 +55,7 @@
                 <br>
                 <a href="#CINCO">Voltar</a>
                 <hr>
+                PYTHON
         </section>
 
         <section ID="SEIS">
@@ -58,6 +63,7 @@
                 <br>
                 <a href="#SEIS">Voltar</a>
                 <hr>
+                SQL
         </section>
     </Main>
 </body>
