--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git hub</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
                 <br>
                 <a href="#UM">Voltar</a>
                 <hr>
-                Java
+                Cauê
         </section>
         
         <section ID="DOIS">
