--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section ID="DOIS">
             PÁGINA 2
                 <br>
-                <a href="#DOIS">Voltar</a>
+                <a href="#UM">Voltar</a>
                 <hr>
                 C#
         </section>
@@ -37,7 +37,7 @@
         <section ID="TRES">
             PÁGINA 3
                 <br>
-                <a href="#TRES">Voltar</a>
+                <a href="#UM">Voltar</a>
                 <hr>
                 HTML E CSS
         </section>
@@ -45,7 +45,7 @@
         <section ID="QUATRO">
             PÁGINA 4
                 <br>
-                <a href="#QUATRO">Voltar</a>
+                <a href="#UM">Voltar</a>
                 <hr>
                 JavaSCRIPT
         </section>
@@ -53,7 +53,7 @@
         <section ID="CINCO">
             PÁGINA 5
                 <br>
-                <a href="#CINCO">Voltar</a>
+                <a href="#UM">Voltar</a>
                 <hr>
                 PYTHON
         </section>
@@ -61,7 +61,7 @@
         <section ID="SEIS">
             PÁGINA 6
                 <br>
-                <a href="#SEIS">Voltar</a>
+                <a href="#UM">Voltar</a>
                 <hr>
                 SQL
         </section>
